--- a/myself.html
+++ b/myself.html
@@ -32,7 +32,7 @@
 		<div class="intro">
 			<div class="intro_infor intro_infor_index">
 				<div class="intro_infor_left"><img src="img/me.jpg"></div>
-				<div class="intro_infor_right"><h1>My name is <b>Shuai Zhou</b></h1><p>From University fo Cincinnati, DAAP College. I focus on <em>UI & UX </em>design. I was worked for Sohu.com, one of the biggest Internet Company in China. Our Mobile Applications which our team worked on had hits <em>2 Billions views</em> in June 23 2014.</p></div>
+				<div class="intro_infor_right"><h1>My name is <b>Shuai Zhou</b></h1><p>From University fo Cincinnati, DAAP College. I focus on <em>UI & UX </em>design. I was worked for Sohu.com, one of the biggest Internet Company in China. <!--Our Mobile Applications which our team worked on had hits <em>2 Billions views</em> in June 23 2014. -->  <br><br>Due to I am working on my new website now, I will only shows two projects that I did. Those two projects shows my design process clearly.</p></div>
 			</div>
 		</div>
 	</div>
