--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -39,8 +39,8 @@
 		    	<div class="title_inside">HCI</div>
 		    	<div class="title_line"></div>
 		        <div id="ti_img" class="design_img"><img src="img/HCI_logo.png"></div>
-		        <div class="design_ui"><span>Help Teacher to find the data information <em>EASILY</em> and <em>QUICKLY</em></span></div>
-		        <div class="design_p"><span>See word reading Website is a student data information website. Teacher through analysis the data which recorded by see word reading App to help student improve the study.</span></div>
+		        <div class="design_ui"><span>Prove a better user expeirence for Patients & Nurse</span></div>
+		        <div class="design_p"><span>MediaCare App is based on Smart TVs & MediaCare software for remotely administering education, communication, enteraniment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span></div>
 	        </div>
             <div class="part part_2">
 	            <div class="title_inside"> DESIGN PROCESS</div>
