--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <span class="headingline headingline_see"></span>
 							<div class="meta"><p>User Research / User Experience / User Interface / Front-end Develop</p></div>
 							<figure class="quote meta">
-                                <blockquote class="heading6"> for me to update products and information. It was great to use one company for everything. I would strongly recommend them to anyone wanting a top quality website. </blockquote>
+                                <blockquote class="heading6">See word reading Website is a student data information website. Teacher through analysis the data which recorded by see word reading App to help student improve the study. </blockquote>
                             </figure>
 							 <a href="portfolio-seeword.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn2">View Project</a>
                         </div>
