--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -38,20 +38,24 @@
 	    	<div class="part part_1">
 		    	<div class="title_inside">HCI</div>
 		    	<div class="title_line"></div>
-		        <div id="ti_img" class="design_img"><img src="img/HCI_logo.png"></div>
+		        <div id="ti_img" class="design_img"><img style="width:35%;" src="img/HCI_logo.png"></div>
 		        <div class="design_ui"><span>Prove a better user expeirence for Patients & Nurse</span></div>
 		        <div class="design_p"><span>MediaCare App is based on Smart TVs & MediaCare software for remotely administering education, communication, enteraniment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span></div>
 	        </div>
             <div class="part part_2">
-	            <div class="title_inside"> DESIGN PROCESS</div>
+	            <div class="title_inside"> How it works ?</div>
 	            <div class="title_line"></div>
-	            <div class="design_img"><img src="img/seeword1.png"></div>
+	            <div class="design_img"><img src="img/hci_3.png"></div>
+	        </div>    
+	        <div class="part part_3">    
 		        <div class="number_box nb">1</div>
-		        <div class="design_title">Research</div>
-		        <div class="design_ui"><span>What problems we have?</span></div>
-		        <div class="design_img"><img src="img/seeword2.png"></div>
+		        <div class="design_title">Challenge</div>
+		        <div class="design_img"><img src="img/hci_2.png"></div>
+		        <div class="design_ui"><span>Due to most of our target users is the aged patients, when we design the App for them, we should pay attention on physical aspect. </span></div>
+		    </div>    
+		    <div class="part part_4">    
 		        <div class="number_box nb">2</div>
-		        <div class="design_title">Solution</div>
+		        <div class="design_title">Research</div>
 		        <div class="design_img"><img src="img/seeword5.png"></div>
 		        <div class="design_ui"><span>Information structure</span></div>
 		        <div class="design_img"><img src="img/seeword3.png"></div>
