--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -46,6 +46,8 @@
 	            <div class="title_inside"> DESIGN PROCESS</div>
 	            <div class="title_line"></div>
 	            <div class="design_img"><img src="img/seeword1.png"></div>
+	        </div>
+	        <div class="part part_3">    
 		        <div class="number_box nb">1</div>
 		        <div class="design_title">Research</div>
 		        <div class="design_ui"><span>What problems we have?</span></div>
