--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -56,19 +56,26 @@
 		    <div class="part part_4">    
 		        <div class="number_box nb">2</div>
 		        <div class="design_title">Research</div>
-		        <div class="design_img"><img src="img/seeword5.png"></div>
-		        <div class="design_ui"><span>Information structure</span></div>
-		        <div class="design_img"><img src="img/seeword3.png"></div>
-		        <div class="design_ui"><span>Wireframe</span></div>
-		        <div class="design_img"><img src="img/seeword4.png"></div>
+		        <div class="design_img_list">
+		        	<ul>
+		        		<li><span></span></li>
+		        		<li><span></span></li>
+		        		<li><span></span></li>
+		        		<li><span></span></li>
+		        	</ul>
+		        </div>
+		        <div class="design_title"><span>Ideation for Solution</span></div>
+		        <div class="design_img"><img src="img/"></div>
+		        <div class="design_title"><span>Wireframe</span></div>
+		        <div class="design_img"><img src="img/"></div>
 		        <div class="number_box nb">3</div>
 		        <div class="design_title">Refine</div>
-		        <div class="design_img"><img src="img/seeword6.png"></div>
+		        <div class="design_img"><img src="img/"></div>
 		        <div class="number_box nb">4</div>
 		        <div class="design_title">Final Prototype</div>
-	            <div class="design_img"><img src="img/seeword1.jpg"></div>  
-	            <div class="design_img"><img src="img/seeword7.png"></div>
-	            <div class="design_img"><img src="img/seeword8.png"></div>
+	            <div class="design_img"><img src="img/"></div>  
+	            <div class="design_img"><img src="img/"></div>
+	            <div class="design_img"><img src="img/"></div>
             </div>
 	      </div>  
 	    </div>
