--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,24 @@
             </div>
             </section>
 
+
+            <section class="container_piece container_piece_3">
+            <div class="portfolio_content portfolio_content_left">
+                 <div class="portfolio_content_img"><a href="portfolio-hci.html"><img src="img/hci_4.png"></a></div>    
+              <div class="copy title-border1">
+                        <div class="inner">
+                            <h2 class="heading2"><a href="portfolio-hci.html" title="See Word Reading Project">HCI-TV Media Care</a></h2>
+                            <span class="headingline headingline_hci"></span>
+                            <div class="meta"><p>User Research & User Test / User Interface / Front-end Develop</p></div>
+                            <figure class="quote meta">
+                                <blockquote class="heading6">HCI is a company which make the media care smart TV. </blockquote>
+                            </figure>
+                             <a href="portfolio-hci.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn3">View Project</a>
+                        </div>
+               </div>
+            </div>
+            </section>
+
 	</div>
 </div>
 
