--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
 		</div>
 
 			<div class="sub_th_1">
+		      <div class="sub_th_sb">		
 				<p class="p1">I Love What I do</p>
 				<p class="p3"></p>
+			  </div>	
 				<p class="p4">Take a look for yourself</p>
-				<p class="p2"><a href="#project_intro"></a></p>
+				<p class="p2"><a href="#project_intro"></a></p>	
 			</div>
 		</div>
 
