--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -29,10 +29,6 @@
 		</div>
 		</div>
 
-		<div class="location">
-			<div class="vertical-text"><p>- 12063.94 K M</p></div>
-		</div>
-
 	    <div class="main_design_container">
 	      <div class="container_box cb_hci">
 	    	<div class="part part_1">
@@ -43,7 +39,7 @@
 		        <div class="design_p"><span>MediaCare App is based on Smart TVs & MediaCare software for remotely administering education, communication, enteraniment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span></div>
 	        </div>
             <div class="part part_2">
-	            <div class="title_inside"> How it works ?</div>
+	            <div class="design_title"> How it works ?</div>
 	            <div class="title_line"></div>
 	            <div class="design_img"><img src="img/hci_3.png"></div>
 	        </div>    
@@ -58,10 +54,45 @@
 		        <div class="design_title">Research</div>
 		        <div class="design_img_list">
 		        	<ul>
-		        		<li><span></span></li>
-		        		<li><span></span></li>
-		        		<li><span></span></li>
-		        		<li><span></span></li>
+		        		<li>
+		        			<div class="hci_con_list">
+		        				<img src="img/hci_a.png">
+		        				<span>Aged Patients:</span>
+		        				<p>- Poor vision</p>
+		        				<p>- Not very clearly mind</p>
+		        				<p>- Slow physical response</p>
+		        			</div>
+		        		</li>
+		        		
+		        		<li>
+		        			<div class="hci_con_list">
+		        				<img src="img/hci_b.png">
+		        				<span>Functions:</span>
+		        				<p>- Media care</p>
+		        				<p>- Patients Education</p>
+		        				<p>- Patients services</p>
+		        			</div>
+		        		</li>
+
+		        		<li>
+		        			<div class="hci_con_list">
+		        				<img src="img/hci_c.png">
+		        				<span>Aged Patients</span>
+		        				<p>- Poor vision</p>
+		        				<p>- Not very clearly mind</p>
+		        				<p>- Slow physical response</p>
+		        			</div>
+		        		</li>
+
+		        		<li>
+		        			<div class="hci_con_list">
+		        				<img src="img/hci_d.png">
+		        				<span>Aged Patients</span>
+		        				<p>- Poor vision</p>
+		        				<p>- Not very clearly mind</p>
+		        				<p>- Slow physical response</p>
+		        			</div>
+		        		</li>
 		        	</ul>
 		        </div>
 		        <div class="design_title"><span>Ideation for Solution</span></div>
