--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -29,16 +29,12 @@
 		</div>
 		</div>
 
-		<div class="location">
-			<div class="vertical-text"><p>- 12063.94 K M</p></div>
-		</div>
-
 	    <div class="main_design_container">
 	      <div class="container_box cb_sohufilm">
 	       <div class="part part_1">
 	    	<div class="title_inside">SoHu Film Website</div>
 	    	<div class="title_line"></div>
-	        <div class="web_link"><a href="http://film.sohu.com" target="_Blank">Live:  www.film.sohu.com</a></div>
+	        <div class="web_link"><a style="text-decoration:underline;" href="http://film.sohu.com" target="_Blank">www.film.sohu.com</a></div>
 	        <div class="design_ui"><span>Provide a better online <em>Movie-Going EXPERIENCE</em></span></div>
 		        <div class="design_p"><span>SoHu Film Website is a website which provided premium movies. Early in the project, I responsible for user research and imporve the user experience. Later, I responsible for interaction design and front-end program.</span></div>
 	        </div>
