--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -51,50 +51,12 @@
 		    </div>    
 		    <div class="part part_4">    
 		        <div class="number_box nb">2</div>
-		        <div class="design_title">Research</div>
-		        <div class="design_img_list">
-		        	<ul>
-		        		<li>
-		        			<div class="hci_con_list">
-		        				<img src="img/hci_a.png">
-		        				<span>Aged Patients:</span>
-		        				<p>- Poor vision</p>
-		        				<p>- Not very clearly mind</p>
-		        				<p>- Slow physical response</p>
-		        			</div>
-		        		</li>
-		        		
-		        		<li>
-		        			<div class="hci_con_list">
-		        				<img src="img/hci_b.png">
-		        				<span>Functions:</span>
-		        				<p>- Media care</p>
-		        				<p>- Patients Education</p>
-		        				<p>- Patients services</p>
-		        			</div>
-		        		</li>
+		        <div class="design_title">The Problems we have</div>
+		        <div class="design_img"><img src="img/hci_5.png"></div>
+		    </div>
 
-		        		<li>
-		        			<div class="hci_con_list">
-		        				<img src="img/hci_c.png">
-		        				<span>Aged Patients</span>
-		        				<p>- Poor vision</p>
-		        				<p>- Not very clearly mind</p>
-		        				<p>- Slow physical response</p>
-		        			</div>
-		        		</li>
+		    <div class="part part_5">
 
-		        		<li>
-		        			<div class="hci_con_list">
-		        				<img src="img/hci_d.png">
-		        				<span>Aged Patients</span>
-		        				<p>- Poor vision</p>
-		        				<p>- Not very clearly mind</p>
-		        				<p>- Slow physical response</p>
-		        			</div>
-		        		</li>
-		        	</ul>
-		        </div>
 		        <div class="design_title"><span>Ideation for Solution</span></div>
 		        <div class="design_img"><img src="img/"></div>
 		        <div class="design_title"><span>Wireframe</span></div>
