--- a/resume.html
+++ b/resume.html
@@ -60,6 +60,14 @@
 	    		<h1>EXPERIENCE</h1>
 	    		<div class="ati">
 	    	      <div class="main_t">
+	    			<span class="main_t_l">UI & UX Designer  HCI-TV, Cincinnati,Ohio, USA</span>
+	    			<span class="main_t_r">May 2015 - August 2015</span>
+	    		  </div>
+	    		<p>- Re-design the Media care App for Android TV, design the monile website App</p>
+	    	    </div>
+
+	    		<div class="ati">
+	    	      <div class="main_t">
 	    			<span class="main_t_l">UI & UX Designer  Sohu, Beijing,China</span>
 	    			<span class="main_t_r">December 2013 - December 2014</span>
 	    		  </div>
@@ -86,6 +94,15 @@
 
 	    	<section class="pro">
 	    		<h1>PROJECTS</h1>
+
+	    		<div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">HCI Meida care Mobile Website App & HCI Media care Android TV App</span>
+	    			<span class="main_t_r">May 2015 - August 2015</span>
+	    		  </div>
+	    		<p>- Responsive UI & UX Design</p>
+	    	    </div>
+
 	    		<div class="ati">
 	    	      <div class="main_t">
 	    			<span class="main_t_l">UED Blog Website</span>
@@ -120,8 +137,8 @@
 	    	    </div>
 	    	</section>
 	    	<section class="skill">
-	    		<h1>SKILLS</h1>
-	    		<div class="ati"><span>HTML5, CSS3, PS, AI, AE, In Design, Photograph</span></div>
+	    		<h1>Tools</h1>
+	    		<div class="ati"><span class="main_t">HTML5,  &nbspCSS3,  &nbspjQuery,  &nbspAdobe Software,  &nbspInVison,  &nbspHype 3,  &nbspSketch 3,  &nbspMicrosoft Software</span></div>
 	    	</section>
 	    </div>
 <!--到顶部的按钮-->
