--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -36,7 +36,7 @@
 		    	<div class="title_line"></div>
 		        <div id="ti_img" class="design_img"><img style="width:35%;" src="img/HCI_logo.png"></div>
 		        <div class="design_ui"><span>Prove a better user expeirence for Patients & Nurse</span></div>
-		        <div class="design_p"><span>MediaCare App is based on Smart TVs & MediaCare software for remotely administering education, communication, enteraniment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span></div>
+		        <div class="design_t_p"><span>MediaCare App is based on Smart TVs & MediaCare software for remotely administering education, communication, enteraniment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span></div>
 	        </div>
             <div class="part part_2">
 	            <div class="design_title"> How it works ?</div>
@@ -44,21 +44,21 @@
 	            <div class="design_img"><img src="img/hci_3.png"></div>
 	        </div>    
 	        <div class="part part_3">    
-		        <div class="number_box nb">1</div>
-		        <div class="design_title">Challenge</div>
+		        <div class="number_box">1</div>
+		        <div class="design_title">Observe</div>
 		        <div class="design_img"><img src="img/hci_2.png"></div>
-		        <div class="design_ui"><span>Due to most of our target users is the aged patients, when we design the App for them, we should pay attention on physical aspect. </span></div>
+		        <div class="design_p"><span>Observe how the patients operate the TV on connatural condition, find the elvements which will inflence the operation by patients</span></div>
 		    </div>    
 		    <div class="part part_4">    
 		        <div class="number_box nb">2</div>
-		        <div class="design_title">The Problems we have</div>
+		        <div class="design_title">Challenge</div>
 		        <div class="design_img"><img src="img/hci_5.png"></div>
 		    </div>
 
 		    <div class="part part_5">
 
 		        <div class="design_title"><span>Ideation for Solution</span></div>
-		        <div class="design_img"><img src="img/"></div>
+		        <div class="design_img"><img src="img/hci_6.png"></div>
 		        <div class="design_title"><span>Wireframe</span></div>
 		        <div class="design_img"><img src="img/"></div>
 		        <div class="number_box nb">3</div>
