--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -36,21 +36,25 @@
 	    	<div class="title_line"></div>
 	        <div class="web_link"><a style="text-decoration:underline;" href="http://film.sohu.com" target="_Blank">www.film.sohu.com</a></div>
 	        <div class="design_ui"><span>Provide a better online <em>Movie-Going EXPERIENCE</em></span></div>
-		        <div class="design_p"><span>SoHu Film Website is a website which provided premium movies. Early in the project, I responsible for user research and imporve the user experience. Later, I responsible for interaction design and front-end program.</span></div>
+		        <div class="design_t_p"><span>SoHu Film Website is a website which provided premium movies. Early in the project, I responsible for user research and imporve the user experience. Later, I responsible for interaction design and front-end program.</span></div>
 	        </div>
 
 	       <div class="part part_2">
 	        <div class="title_inside">DESIGN PROCESS</div>
 	        <div class="title_line"></div>
 	        <div class="design_img"><img src="img/film.png"></div>
-
+	       </div>
+	       
+	       <div class="part part_3"> 
 	        <section class="film_box film_box_1">
 	        <div class="number_box">1</div>
-	        <div class="design_title">Research</div>
+	        <div class="design_title">Interview & Benchmark</div>
 	        <div class="design_p"><span>Interview the target users, Find out some problems and get the suggests from them. We divided problems into <em>Three Categorise</em></span></div>
 	        <div class="design_img"><img src="img/film1.png"></div>
 	        </section>
+	       </div>
 
+	       <div class="part part_4">
 	        <section class="film_box film_box_2">
 	        <div class="number_box">2</div>
 	        <div class="design_title">Ideation</div>
@@ -59,13 +63,26 @@
 	        <div class="design_ui"><span>Wireframe and Prototype</span></div>
 	        <div class="design_img"><img src="img/film4.png"></div>
 	        </section>
+	       </div>
 
+	       <div class="part part_5"> 
 	        <section class="film_box film_box_3">
 	        <div class="number_box">3</div>
+	        <div class="design_title">Usability Testing</div>
+	        <div class="design_p"><span>There were 30 users to help us to do the user testing, we record the process to observe how the user find the movie which they want. <br> We find there has two groups, one of the group known which movie they want see， other group just want find a good movie to kill the time. </span></div>
+	        <div class="design_img"><img src="img/film3.3.png"></div>
+	        </section>
+	       </div>
+	       
+	       <div class="part part_6"> 
+	        <section class="film_box film_box_3">
+	        <div class="number_box">4</div>
 	        <div class="design_title">Evaluate</div>
 	        <div class="design_img"><img src="img/film5.png"></div>
 	        </section>
+	       </div>
 
+	       <div class="part part_6">
 	        <section class="film_box film_box_4">
             <div class="number_box">4</div>
 	        <div class="design_title">Visual Prototype</div>
@@ -74,6 +91,7 @@
             <div class="design_img"><img src="img/film3.jpg"></div>
             </section>
            </div>
+
            </div>
 	      </div>  
 	    </div>
