--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
 	    		<h1>EXPERIENCE</h1>
 	    		<div class="ati">
 	    	      <div class="main_t">
-	    			<span class="main_t_l">UI & UX Designer  HCI-TV, Cincinnati,Ohio, USA</span>
+	    			<span class="main_t_l">UI & UX Designer in HCI-TV, Cincinnati,Ohio, USA</span>
 	    			<span class="main_t_r">May 2015 - August 2015</span>
 	    		  </div>
 	    		<p>- Re-design the Media care App for Android TV, design the monile website App</p>
@@ -68,7 +68,7 @@
 
 	    		<div class="ati">
 	    	      <div class="main_t">
-	    			<span class="main_t_l">UI & UX Designer  Sohu, Beijing,China</span>
+	    			<span class="main_t_l">UI & UX Designer in Sohu, Beijing,China</span>
 	    			<span class="main_t_r">December 2013 - December 2014</span>
 	    		  </div>
 	    		<p>- Worked at HTML5 & UED( User Experience Design )Group</p>
@@ -76,7 +76,7 @@
 
 	    	    <div class="ati">
 	    	      <div class="main_t">
-	    			<span class="main_t_l">Graphic Designer  Michelman, Cincinnati, Ohio, USA</span>
+	    			<span class="main_t_l">Graphic Designer in Michelman, Cincinnati, Ohio, USA</span>
 	    			<span class="main_t_r">May 2013 - August 2013</span>
 	    		  </div>
 	    		<p>- Supported Marketing Department to do the graphic work</p>
