--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -57,7 +57,7 @@
 
 		    <div class="part part_5">
 
-		        <div class="design_title"><span>Ideation for Solution</span></div>
+		        <div class="design_title"><span>Ideation</span></div>
 		        <div class="design_img"><img src="img/hci_6.png"></div>
 		        <div class="design_title"><span>Wireframe</span></div>
 		        <div class="design_img"><img src="img/"></div>
