--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -57,8 +57,9 @@
 
 		    <div class="part part_5">
 
-		        <div class="design_title"><span>Ideation</span></div>
+		        <div class="design_title"><span>The Problem We Need to Figure Out</span></div>
 		        <div class="design_img"><img src="img/hci_6.png"></div>
+		        <div class="design_img"><img src="img/hci_3.5.png"></div>
 		        <div class="design_title"><span>Wireframe</span></div>
 		        <div class="design_img"><img src="img/"></div>
 		        <div class="number_box nb">3</div>
