--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -49,6 +49,7 @@
 	        <section class="film_box film_box_1">
 	        <div class="number_box">1</div>
 	        <div class="design_title">Interview & Benchmark</div>
+	        <div class="design_img"><img src="img/film3.4.png"></div>
 	        <div class="design_p"><span>Interview the target users, Find out some problems and get the suggests from them. We divided problems into <em>Three Categorise</em></span></div>
 	        <div class="design_img"><img src="img/film1.png"></div>
 	        </section>
