--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -61,6 +61,7 @@
 		        <div class="design_img"><img src="img/hci_6.png"></div>
 		        <div class="design_img"><img src="img/hci_3.5.png"></div>
 		        <div class="design_title"><span>Wireframe</span></div>
+		        <div class="design_img"><img src="img/hci_3.6.png"></div>
 		        <div class="design_img"><img src="img/"></div>
 		        <div class="number_box nb">3</div>
 		        <div class="design_title">Refine</div>
