--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -31,13 +31,15 @@
 
 	    <div class="main_design_container">
 	      <div class="container_box cb_hci">
-	    	<div class="part part_1">
-		    	<div class="title_inside">HCI</div>
-		    	<div class="title_line"></div>
-		        <div id="ti_img" class="design_img"><img style="width:35%;" src="img/HCI_logo.png"></div>
+	    	<div class="part part_0">
+	    		<div class="title_inside">HCI</div>
+	        </div>
+
+	        <div class="part part_1">
 		        <div class="design_ui"><span>Prove a better user expeirence for Patients & Nurse</span></div>
 		        <div class="design_t_p"><span>MediaCare App is based on Smart TVs & MediaCare software for remotely administering education, communication, enteraniment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span></div>
 	        </div>
+
             <div class="part part_2">
 	            <div class="design_title"> How it works ?</div>
 	            <div class="title_line"></div>
@@ -59,18 +61,17 @@
 
 		        <div class="design_title"><span>The Problem We Need to Figure Out</span></div>
 		        <div class="design_img"><img src="img/hci_6.png"></div>
-		        <div class="design_img"><img src="img/hci_3.5.png"></div>
+		        <div class="design_img"><img src="img/hci_7.png"></div>
 		        <div class="design_title"><span>Wireframe</span></div>
-		        <div class="design_img"><img src="img/hci_3.6.png"></div>
+		        <div class="design_img"><img src="img/hci_design_color.png"></div>
+		        <div class="design_p"><span> Red color will </span></div>
+		        <div class="design_img"><img src="img/hci_design_elements.png"></div>
 		        <div class="design_img"><img src="img/"></div>
 		        <div class="number_box nb">3</div>
 		        <div class="design_title">Refine</div>
 		        <div class="design_img"><img src="img/"></div>
 		        <div class="number_box nb">4</div>
 		        <div class="design_title">Final Prototype</div>
-	            <div class="design_img"><img src="img/"></div>  
-	            <div class="design_img"><img src="img/"></div>
-	            <div class="design_img"><img src="img/"></div>
             </div>
 	      </div>  
 	    </div>
