--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -31,10 +31,13 @@
 
 	    <div class="main_design_container">
 	      <div class="container_box cb_sohufilm">
-	       <div class="part part_1">
+
+	      	<div class="part part_0">
 	    	<div class="title_inside">SoHu Film Website</div>
-	    	<div class="title_line"></div>
 	        <div class="web_link"><a style="text-decoration:underline;" href="http://film.sohu.com" target="_Blank">www.film.sohu.com</a></div>
+	        </div>
+
+	       <div class="part part_1">
 	        <div class="design_ui"><span>Provide a better online <em>Movie-Going EXPERIENCE</em></span></div>
 		        <div class="design_t_p"><span>SoHu Film Website is a website which provided premium movies. Early in the project, I responsible for user research and imporve the user experience. Later, I responsible for interaction design and front-end program.</span></div>
 	        </div>
@@ -50,7 +53,7 @@
 	        <div class="number_box">1</div>
 	        <div class="design_title">Interview & Benchmark</div>
 	        <div class="design_img"><img src="img/film3.4.png"></div>
-	        <div class="design_p"><span>Interview the target users, Find out some problems and get the suggests from them. We divided problems into <em>Three Categorise</em></span></div>
+	        <div class="design_p"><span>Invited the users used few of similar products made by other company. Getiing some feedbacks and the suggests from them. <br><br>We divided problems into <em>Three Categorise</em></span></div>
 	        <div class="design_img"><img src="img/film1.png"></div>
 	        </section>
 	       </div>
