--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -35,6 +35,11 @@
 
 	    <div class="main_design_container">
 	      <div class="container_box cb_seeword">
+
+	      	<div class="part part_0">
+		    	<div class="title_inside">SEE WORD READING</div>
+	        </div>
+
 	    	<div class="part part_1">
 		    	<div class="title_inside">SEE WORD READING</div>
 		    	<div class="title_line"></div>
