--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -32,7 +32,7 @@
 	    <div class="main_design_container">
 	      <div class="container_box cb_hci">
 	    	<div class="part part_0">
-	    		<div class="title_inside">HCI</div>
+	    		<div class="title_inside">Health Care Information TV App</div>
 	        </div>
 
 	        <div class="part part_1">
@@ -72,6 +72,7 @@
 		        <div class="design_img"><img src="img/"></div>
 		        <div class="number_box nb">4</div>
 		        <div class="design_title">Final Prototype</div>
+		        <div class="design_img"><img src="img/hci_8.png"></div>
             </div>
 	      </div>  
 	    </div>
