--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -61,12 +61,16 @@
 		    	<div class="number_box">3</div>
 		        <div class="design_title"><span>The Problem We Need to Figure Out</span></div>
 		        <div class="design_img"><img src="img/hci_6.png"></div>
+		        <div class="design_p"><span>- A lot of <em>Unreasonable Layout</em> of the information caused difficulty reading experience.</span></div>
+		        <div class="design_p"><span>- The alert box shows in a unfriendly way.</span></div>
+		        <div class="design_p"><span>- The information shows not clear is a source of confusion.</span></div>
 		        <div class="design_img"><img src="img/hci_7.png"></div>
 		    </div>
 		    
 		    <div class="part part_6">   
 		        <div class="number_box">4</div> 
 		        <div class="design_title"><span>Wireframe</span></div>
+		        <div class="design_img"><img src="img/hci_4.png"></div>
 		        <div class="design_img"><img src="img/hci_design_color.png"></div>
 		        <div class="design_p"><span> Red color will </span></div>
 		        <div class="design_img"><img src="img/hci_design_elements.png"></div>
