--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <section class="container_piece container_piece_3">
             <div class="portfolio_content portfolio_content_left">
-            	 <div class="portfolio_content_img"><a href="portfolio-hci.html"><img src="img/hci_4.png"></a></div>	
+            	 <div class="portfolio_content_img"><a href="portfolio-hci.html"><img src="img/hci_tv.gif"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
                             <h2 class="heading2"><a href="portfolio-hci.html" title="See Word Reading Project">HCI-TV Media Care</a></h2>
