--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -90,9 +90,7 @@
 	        <section class="film_box film_box_4">
             <div class="number_box">4</div>
 	        <div class="design_title">Visual Prototype</div>
-            <div class="design_img"><img src="img/film1.jpg"></div>
-            <div class="design_img"><img src="img/film2.jpg"></div>
-            <div class="design_img"><img src="img/film3.jpg"></div>
+            <div class="design_img"><img src="img/film7.png"></div>
             </section>
            </div>
 
