--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -54,21 +54,21 @@
 	        </div>
 	        <div class="part part_3">    
 		        <div class="number_box nb">1</div>
-		        <div class="design_title">Research</div>
+		        <div class="design_title">RESEARCH</div>
 		        <div class="design_ui"><span>What problems we have?</span></div>
 		        <div class="design_img"><img src="img/seeword2.png"></div>
 		        <div class="number_box nb">2</div>
-		        <div class="design_title">Solution</div>
+		        <div class="design_title">SOLUTION</div>
 		        <div class="design_img"><img src="img/seeword5.png"></div>
 		        <div class="design_ui"><span>Information structure</span></div>
 		        <div class="design_img"><img src="img/seeword3.png"></div>
 		        <div class="design_ui"><span>Wireframe</span></div>
 		        <div class="design_img"><img src="img/seeword4.png"></div>
 		        <div class="number_box nb">3</div>
-		        <div class="design_title">Refine</div>
+		        <div class="design_title">USER TESTING</div>
 		        <div class="design_img"><img src="img/seeword6.png"></div>
 		        <div class="number_box nb">4</div>
-		        <div class="design_title">Final Prototype</div>
+		        <div class="design_title">VISUAL INTERFACE</div>
 	            <div class="design_img"><img src="img/seeword1.jpg"></div>  
 	            <div class="design_img"><img src="img/seeword7.png"></div>
 	            <div class="design_img"><img src="img/seeword8.png"></div>
