--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -43,7 +43,7 @@
 	        </div>
 
 	       <div class="part part_2">
-	        <div class="title_inside">DESIGN PROCESS</div>
+	        <div class="design_title">DESIGN PROCESS</div>
 	        <div class="title_line"></div>
 	        <div class="design_img"><img src="img/film.png"></div>
 	       </div>
@@ -51,7 +51,7 @@
 	       <div class="part part_3"> 
 	        <section class="film_box film_box_1">
 	        <div class="number_box">1</div>
-	        <div class="design_title">Interview & Benchmark</div>
+	        <div class="design_title">INTERVIEW & BENCHMARK</div>
 	        <div class="design_img"><img src="img/film3.4.png"></div>
 	        <div class="design_p"><span>Invited the users used few of similar products made by other company. Getiing some feedbacks and the suggests from them. <br><br>We divided problems into <em>Three Categorise</em></span></div>
 	        <div class="design_img"><img src="img/film1.png"></div>
@@ -61,7 +61,7 @@
 	       <div class="part part_4">
 	        <section class="film_box film_box_2">
 	        <div class="number_box">2</div>
-	        <div class="design_title">Ideation</div>
+	        <div class="design_title">IDEATION</div>
 	        <div class="design_ui"><span>Information Structure</span></div>
 	        <div class="design_img_high"><img src="img/film2.png"></div>
 	        <div class="design_ui"><span>Wireframe and Prototype</span></div>
@@ -72,7 +72,7 @@
 	       <div class="part part_5"> 
 	        <section class="film_box film_box_3">
 	        <div class="number_box">3</div>
-	        <div class="design_title">Usability Testing</div>
+	        <div class="design_title">USABILITY TESTING</div>
 	        <div class="design_p"><span>There were 30 users to help us to do the user testing, we record the process to observe how the user find the movie which they want. <br> We find there has two groups, one of the group known which movie they want see， other group just want find a good movie to kill the time. </span></div>
 	        <div class="design_img"><img src="img/film3.3.png"></div>
 	        </section>
@@ -87,7 +87,7 @@
 	       <div class="part part_6">
 	        <section class="film_box film_box_4">
             <div class="number_box">5</div>
-	        <div class="design_title">Visual Prototype</div>
+	        <div class="design_title">VISUAL PROTOTYPE</div>
             <div class="design_img"><img src="img/film7.png"></div>
             </section>
            </div>
