--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -36,20 +36,20 @@
 	        </div>
 
 	        <div class="part part_1">
-		        <div class="design_ui"><span>Prove a better user expeirence for Patients & Nurse</span></div>
+	        	<div class="design_title"> WHAT WE DO ?</div>
 		        <div class="design_t_p"><span>MediaCare App is based on Smart TVs & MediaCare software for remotely administering education, communication, enteraniment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span></div>
+		        <div class="design_img"><img src="img/hci_3.png"></div>
 	        </div>
 
             <div class="part part_2">
-	            <div class="design_title"> HOW IT WORKS ?</div>
-	            <div class="title_line"></div>
-	            <div class="design_img"><img src="img/hci_3.png"></div>
+	            <div class="design_title"> REDESIGN THE ANDROID TV APP</div>
+	             <div class="design_ui"><span>Prove a better health care education & service expeirences for Patients</span></div>
 	        </div>    
 	        <div class="part part_3">    
 		        <div class="number_box">1</div>
 		        <div class="design_title">OBSERVE</div>
-		        <div class="design_img"><img src="img/hci_2.png"></div>
 		        <div class="design_p"><span>Observe how the patients operate the TV on connatural condition, find the elvements which will inflence the operation by patients</span></div>
+		        <div class="design_img"><img src="img/hci_2.png"></div>
 		    </div>    
 		    <div class="part part_4">    
 		        <div class="number_box nb">2</div>
