--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -52,8 +52,9 @@
 	        <section class="film_box film_box_1">
 	        <div class="number_box">1</div>
 	        <div class="design_title">INTERVIEW & BENCHMARK</div>
+	        <div class="design_p"><span>Invited the users used few of similar products made by other company. Getiing some feedbacks and the suggests from them. </span></div>
 	        <div class="design_img"><img src="img/film3.4.png"></div>
-	        <div class="design_p"><span>Invited the users used few of similar products made by other company. Getiing some feedbacks and the suggests from them. <br><br>We divided problems into <em>Three Categorise</em></span></div>
+	         <div class="design_p" style="text-align:center;"><span>We divided problems into <em>Three Categorise</em></span></div>
 	        <div class="design_img"><img src="img/film1.png"></div>
 	        </section>
 	       </div>
@@ -81,6 +82,7 @@
 	       <div class="part part_6"> 
 	        <section class="film_box film_box_3">
 	        <div class="number_box">4</div>
+	        <div class="design_title">REFINE</div>
 	        </section>
 	       </div>
 
