--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -60,10 +60,12 @@
 		    <div class="part part_5">
 		    	<div class="number_box">3</div>
 		        <div class="design_title"><span>PROBLEMS</span></div>
-		        <div class="design_img"><img src="img/hci_6.png"></div>
-		        <div class="design_p"><span>- A lot of <em>Unreasonable Layout</em> of the information caused difficulty reading experience.</span></div>
+		        <div class="design_subt"><span>Visual Problems</span></div>
 		        <div class="design_p"><span>- The alert box shows in a unfriendly way.</span></div>
 		        <div class="design_p"><span>- The information shows not clear is a source of confusion.</span></div>
+		        <div class="design_p"><span>- A lot of <em>Unreasonable Layout</em> of the information caused difficulty reading experience.</span></div>
+		        <div class="design_img"><img src="img/hci_6.png"></div>
+		        <div class="design_subt"><span>Manipulation Problems</span></div>
 		        <div class="design_img"><img src="img/hci_7.png"></div>
 		    </div>
 		    
@@ -76,7 +78,8 @@
 		    <div class="part part_7">
 		        <div class="number_box">5</div>  
 		        <div class="design_title">REFINE</div>
-		        <div class="design_img"><img src="img/hci_4.png"></div>
+		        <div class="design_img"><img src="img/hci_10.png"></div>
+		        <div class="design_img"><img src="img/hci_11.png"></div>
 		    </div>
 		    
 		    <div class="part part_8">    
