--- a/portfolio-seewordweb.html
+++ b/portfolio-seewordweb.html
@@ -29,20 +29,14 @@
 		</div>
 		</div>
 
-		<div class="location">
-			<div class="vertical-text"><p>- 12063.94 K M</p></div>
-		</div>
-
 	    <div class="main_design_container">
 	      <div class="container_box cb_seeword">
 
 	      	<div class="part part_0">
-		    	<div class="title_inside">SEE WORD READING</div>
+		    	<div class="title_inside">SEE WORD READING Website Design</div>
 	        </div>
 
 	    	<div class="part part_1">
-		    	<div class="title_inside">SEE WORD READING</div>
-		    	<div class="title_line"></div>
 		        <div id="ti_img" class="design_img"><img src="img/seeword.png"></div>
 		        <div class="design_ui"><span>Help Teacher to find the data information <em>EASILY</em> and <em>QUICKLY</em></span></div>
 		        <div class="design_p"><span>See word reading Website is a student data information website. Teacher through analysis the data which recorded by see word reading App to help student improve the study.</span></div>
