--- a/index.html
+++ b/index.html
@@ -60,6 +60,38 @@
 
 		<div class="container" id="project_intro">
 
+			<section class="container_piece container_piece_3">
+            <div class="portfolio_content portfolio_content_left">
+            	 <div class="portfolio_content_img"><a href="portfolio-hci.html"><img src="img/hci_tv.gif"></a></div>	
+			  <div class="copy title-border1">
+                        <div class="inner">
+                            <h2 class="heading2"><a href="portfolio-hci.html" title="See Word Reading Project">HCI-TV Media Care</a></h2>
+                            <span class="headingline headingline_hci"></span>
+							<figure class="quote meta">
+                                <blockquote class="heading6">HCI is a company which make the media care smart TV. </blockquote>
+                            </figure>
+							 <a href="portfolio-hci.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn3">View Project</a>
+                        </div>
+               </div>
+            </div>
+            </section>
+
+            <section class="container_piece container_piece_4">
+            <div class="portfolio_content portfolio_content_right">
+            	 <div class="portfolio_content_img"><a href="portfolio-seewordapp.html"><img src="img/4.png"></a></div>	
+			  <div class="copy title-border1">
+                        <div class="inner">
+                            <h2 class="heading2"><a href="portfolio-seewordapp.html" title="See Word Reading Project">See Word Reading Teacher App</a></h2>
+                            <span class="headingline headingline_see"></span>
+							<figure class="quote meta">
+                                <blockquote class="heading6">See word reading teacher app is a student data information website. Teacher through analysis the data which recorded by see word reading App to help student improve the study. </blockquote>
+                            </figure>
+							 <a href="portfolio-seewordapp.html" title="See Word Reading Web Design Project" class="btn btn2">View Project</a>
+                        </div>
+               </div>
+            </div>
+            </section>
+
 			<section class="container_piece container_piece_1">
 			<div class="portfolio_content portfolio_content_left">
 			  <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/1s.png"></a></div>	
@@ -79,31 +111,15 @@
 
             <section class="container_piece container_piece_2">
             <div class="portfolio_content portfolio_content_right">
-            	 <div class="portfolio_content_img"><a href="portfolio-seeword.html"><img src="img/4.png"></a></div>	
+            	 <div class="portfolio_content_img"><a href="portfolio-seewordweb.html"><img src="img/4.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-seeword.html" title="See Word Reading Project">See Word Reading</a></h2>
+                            <h2 class="heading2"><a href="portfolio-seewordweb.html" title="See Word Reading Project">See Word Reading Webiste</a></h2>
                             <span class="headingline headingline_see"></span>
 							<figure class="quote meta">
                                 <blockquote class="heading6">See word reading Website is a student data information website. Teacher through analysis the data which recorded by see word reading App to help student improve the study. </blockquote>
                             </figure>
-							 <a href="portfolio-seeword.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn2">View Project</a>
-                        </div>
-               </div>
-            </div>
-            </section>
-
-            <section class="container_piece container_piece_3">
-            <div class="portfolio_content portfolio_content_left">
-            	 <div class="portfolio_content_img"><a href="portfolio-hci.html"><img src="img/hci_tv.gif"></a></div>	
-			  <div class="copy title-border1">
-                        <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-hci.html" title="See Word Reading Project">HCI-TV Media Care</a></h2>
-                            <span class="headingline headingline_hci"></span>
-							<figure class="quote meta">
-                                <blockquote class="heading6">HCI is a company which make the media care smart TV. </blockquote>
-                            </figure>
-							 <a href="portfolio-hci.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn3">View Project</a>
+							 <a href="portfolio-seewordweb.html" title="See Word Reading Web Design Project" class="btn btn2">View Project</a>
                         </div>
                </div>
             </div>
