--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <section class="container_piece container_piece_4">
             <div class="portfolio_content portfolio_content_right">
-            	 <div class="portfolio_content_img"><a href="portfolio-seewordapp.html"><img src="img/4.png"></a></div>	
+            	 <div class="portfolio_content_img"><a href="portfolio-seewordapp.html"><img src="img/seewordapp.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
                             <h2 class="heading2"><a href="portfolio-seewordapp.html" title="See Word Reading Project">See Word Reading Teacher App</a></h2>
