--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<a href="index.html"><span class="logo_img"></span></a>
 			</div>
 				<ul class="menu">
-					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
+					<li class="selected"><a href="#project_intro">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
 					<li><a href="myself.html">ABOUT ME</a></li>
 				</ul>
@@ -65,10 +65,10 @@
             	 <div class="portfolio_content_img"><a href="portfolio-hci.html"><img src="img/hci_tv.gif"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-hci.html" title="See Word Reading Project">HCI-TV Media Care</a></h2>
+                            <h2 class="heading2"><a href="portfolio-hci.html" title="See Word Reading Project">HCI TV App</a></h2>
                             <span class="headingline headingline_hci"></span>
 							<figure class="quote meta">
-                                <blockquote class="heading6">HCI is a company which make the media care smart TV. </blockquote>
+                                <blockquote class="heading6">Health Care Information TV App to ensure that great content is delivered to Patients as clearly as possible.</blockquote>
                             </figure>
 							 <a href="portfolio-hci.html" title="Play Audio - Cheltenham Web Design Project" class="btn btn3">View Project</a>
                         </div>
@@ -97,7 +97,7 @@
 			  <div class="portfolio_content_img"><a href="portfolio-sohufilm.html"><img src="img/1s.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">SoHu Film Website</a></h2>
+                            <h2 class="heading2"><a href="portfolio-sohufilm.html" title="SoHu Film Website">Sohu Film Website</a></h2>
                             <span class="headingline headingline_film"></span>
 							<figure class="quote meta">
                                 <blockquote class="heading6"> SoHu Film Website is a website which provided the premium movies. Our objective is to improve a better online Movie-Going experience. </blockquote>
@@ -108,22 +108,55 @@
             </div>
             </section>
 
-
-            <section class="container_piece container_piece_2">
-            <div class="portfolio_content portfolio_content_right">
-            	 <div class="portfolio_content_img"><a href="portfolio-seewordweb.html"><img src="img/4.png"></a></div>	
+            <section class="container_piece container_piece_5">
+			<div class="portfolio_content portfolio_content_right">
+			  <div class="portfolio_content_img"><a href="portfolio-sce.html"><img src="img/5.png"></a></div>	
 			  <div class="copy title-border1">
                         <div class="inner">
-                            <h2 class="heading2"><a href="portfolio-seewordweb.html" title="See Word Reading Project">See Word Reading Webiste</a></h2>
+                            <h2 class="heading2"><a href="portfolio-sce.html" title="SoHu Film Website">Sohu Fans App</a></h2>
+                            <span class="headingline headingline_film"></span>
+							<figure class="quote meta">
+                                <blockquote class="heading6">Sohu Fans App draws fans deeper into American drama, allowing them to predict the outcome of every pitch and every play. It’s the perfect companion to being at the ballpark.</blockquote>
+                            </figure>
+							 <a href="portfolio-sce.html" title="Sohu film Web Design Project" class="btn btn1">View Project</a>
+                        </div>
+              </div>
+            </div>
+            </section>
+
+
+            <section class="container_piece container_piece_2">
+            <div class="portfolio_content portfolio_content_left">
+            	 <div class="portfolio_content_img"><a href="portfolio-sce.html"><img src="img/sce1.png"></a></div>	
+			  <div class="copy title-border1">
+                        <div class="inner">
+                            <h2 class="heading2"><a href="portfolio-sce.html" title="Sohu Cloudscape">Sohu Cloudscape</a></h2>
                             <span class="headingline headingline_see"></span>
 							<figure class="quote meta">
-                                <blockquote class="heading6">See word reading Website is a student data information website. Teacher through analysis the data which recorded by see word reading App to help student improve the study. </blockquote>
+                                <blockquote class="heading6">Sohu Cloudscape provided the best Paas service.</blockquote>
                             </figure>
-							 <a href="portfolio-seewordweb.html" title="See Word Reading Web Design Project" class="btn btn2">View Project</a>
+							 <a href="portfolio-sce.html" title="Sohu Cloudscape Web Design Project" class="btn btn2">View Project</a>
                         </div>
                </div>
             </div>
             </section>
+
+            <section class="container_piece container_piece_6">
+			<div class="portfolio_content portfolio_content_right">
+			  <div class="portfolio_content_img"><a href="portfolio-sce.html"><img src="img/1.png"></a></div>	
+			  <div class="copy title-border1">
+                        <div class="inner">
+                            <h2 class="heading2"><a href="portfolio-sce.html" title="SoHu Film Website">Music Player</a></h2>
+                            <span class="headingline headingline_film"></span>
+							<figure class="quote meta">
+                                <blockquote class="heading6"> SoHu Film Website is a website which provided the premium movies. Our objective is to improve a better online Movie-Going experience. </blockquote>
+                            </figure>
+							 <a href="portfolio-sce.html" title="Sohu film Web Design Project" class="btn btn1">View Project</a>
+                        </div>
+              </div>
+            </div>
+            </section>
+
 
 
 	    </div>
