--- a/portfolio-sce.html
+++ b/portfolio-sce.html
@@ -19,41 +19,47 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><img src="img/logo.png"></a>
+				<a href="index.html"><span class="logo_img"></span></a>
 			</div>
 				<ul class="menu">
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="resume.html">RESUME</a></li>
+					<li><a href="myself.html" >ABOUT ME</a></li>
 				</ul>
 		</div>
 		</div>
 
-		<div class="location">
-			<div class="vertical-text"><p>- 12063.94 K M</p></div>
-		</div>
-
 	    <div class="main_design_container">
 	      <div class="container_box cb_sce">
-	       <div class="part part_1"> 	
-	    	<div class="title_inside">SCE Website</div>
-	    	<div class="title_line"></div>
-	        <div class="web_link"><a href="http://cloudscape.sohu.com" target="_Blank">www.cloudscape.sohu.com</a></div>
-	       </div>
+
+	      	<div class="part part_0">
+	    	<div class="title_inside">Sohu Cloudscape Web Design</div>
+	        </div>
+
+	       <div class="part part_1">
+	       	<div class="web_link"><a style="text-decoration:underline;" href="cloudscape.sohu.com" target="_Blank">www.cloudscape.sohu.com</a></div>
+	        <div class="design_ui"><span>Provide the best PaaS service<em>for developers.</em></span></div>
+		        <div class="design_t_p"><span>SoHu Film Website is a website which provided premium movies. Early in the project, I responsible for user research and imporve the user experience. Later, I responsible for interaction design and front-end program.</span></div>
+	        </div>
+
 	       <div class="part part_2">
-	        <div class="title_inside">DESIGN PROCESS</div>
+	        <div class="design_title">DESIGN PROCESS</div>
 	        <div class="title_line"></div>
-	        <div class="number_box nb">1</div>
-	        <div class="design_title">Ideation</div>
-	        <div class="design_ui"><span>Our Target</span></div>
-            <div class="design_img" id="sceimg"><img src="img/sce2.jpg"></div>
-            <div class="design_img"><img src="img/sce1.jpg"></div>
-            <div class="number_box nb">3</div>
-	        <div class="title_inside"> UX DESIGN</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span>The Website focus on programmer and developer, we communicated with them to find what kind of style they like.</span></div>
-	        <div class="design_img"><img src="img/sce4.jpg"></div>
-            <div class="design_img"><img src="img/sce3.jpg"></div>
-           </div> 
+	        <div class="design_img"><img src="img/film.png"></div>
+	       </div>
+	       
+	       <div class="part part_3"> 
+	        <section class="film_box film_box_1">
+	        <div class="number_box">1</div>
+	        <div class="design_title">INTERVIEW & BENCHMARK</div>
+	        <div class="design_p"><span>Invited the users used few of similar products made by other company. Getiing some feedbacks and the suggests from them. </span></div>
+	        <div class="design_img"><img src="img/film3.4.png"></div>
+	         <div class="design_p" style="text-align:center;"><span>We divided problems into <em>Three Categorise</em></span></div>
+	        <div class="design_img"><img src="img/film1.png"></div>
+	        </section>
+	       </div>
+
+
 	      </div>  
 	    </div>
     
@@ -66,8 +72,9 @@
 	    	<div class="bot-link">
 	        	<div class="link-list">
 	        		  <ul class="linked">
-	        			<li class="lik"><span class="phone"><a href="tel:9175452916">917-545-2916</a></span></li>
-	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
+	        			<li class="lik"><span class="linkein"><a href="https://www.linkedin.com/pub/shuai-zhou/b2/729/898" target="value"></a></span></li>
+	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com"></a></span></li>
+	        			<li class="lik"><span class="phone"><a href="tel:9175452916"></a></span>
 	        		  </ul>
 	        	</div>
         	</div>	
