--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
 
 		<div class="intro">
 			<div class="intro_resume">
-				<div class="intro_resume_download"><a href="img/ShuaiZhou_resume.pdf" target="_self"><span id="red"> Download </span></a></div>
+				<div class="intro_resume_download"><a href="img/ShuaiZhou's Resume.pdf" target="view_window"><span id="red"> Download </span></a></div>
 			</div>
 		</div>
 
