--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -66,6 +66,9 @@
 		        <div class="design_p"><span>- A lot of <em>Unreasonable Layout</em> of the information caused difficulty reading experience.</span></div>
 		        <div class="design_img"><img src="img/hci_6.png"></div>
 		        <div class="design_subt"><span>Manipulation Problems</span></div>
+		        <div class="design_p"><span>- Some buttons not reasonable operated.</span></div>
+		        <div class="design_p"><span>- Reduce click steps tp improve a better interactive experience.</span></div>
+		        <div class="design_p"><span>- Show the button state clearly to make sure patients not confused when they operated</span></div>
 		        <div class="design_img"><img src="img/hci_7.png"></div>
 		    </div>
 		    
@@ -79,6 +82,9 @@
 		        <div class="number_box">5</div>  
 		        <div class="design_title">REFINE</div>
 		        <div class="design_img"><img src="img/hci_10.png"></div>
+		        <div class="design_p"><span> Hold the information which can not influence</span></div>
+		        <div class="design_p"><span>- Reduce click steps tp improve a better interactive experience.</span></div>
+		        <div class="design_p"><span>- Show the button state clearly to make sure patients not confused when they operated</span></div>
 		        <div class="design_img"><img src="img/hci_11.png"></div>
 		    </div>
 		    
